--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "enum",
     "enums"
   ],
-  "author": "Christian Hoffmann <hoffiboffi19@gmx.de> (http://)",
+  "author": "Christian Hoffmann <npm@hoffiboffi.de> (http://)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nahasapeemapetilon/MyTelegramMenu/issues"
